[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic-curve = "0.13.2"
indexmap = "1.9.3"
k256 = { version = "0.13.0", features = ["serde", "pem"] }
rand = "0.8.5"
serde_json = "1.0.95"
sha2 = "0.10.6"
text_io = "0.1.12"
